--- a/contact.html
+++ b/contact.html
@@ -119,260 +119,6 @@
 						<div class="col-lg-8 col-md-12">
 							<nav class="main_menu ul_li_center clearfix">
 								<ul class="clearfix">
-									<li class="menu_item_has_child">
-										<a href="#!">Home</a>
-										<div class="mega_menu">
-											<div class="home_items_submenu">
-												<div class="row">
-													<div class="items_col">
-														<a href="index.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_1_agency.jpg" alt="image_not_found">
-															</span>
-															<small>Agency</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_app_landing.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_2_app_landing.jpg" alt="image_not_found">
-															</span>
-															<small>App Landing</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_chat.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_3_chat.jpg" alt="image_not_found">
-															</span>
-															<small>Chat</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_digital_agency.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_4_digital_agency.jpg" alt="image_not_found">
-															</span>
-															<small>Digital Agency</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_digital_marketing.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_5_digital_marketing.jpg" alt="image_not_found">
-															</span>
-															<small>Digital Marketing</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_hr_management.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_6_HR_management.jpg" alt="image_not_found">
-															</span>
-															<small>HR Management</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_payment.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_7_payment.jpg" alt="image_not_found">
-															</span>
-															<small>Payment</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_project_management.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_8_project_management.jpg" alt="image_not_found">
-															</span>
-															<small>Project Management</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_saas.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_9_saas.jpg" alt="image_not_found">
-															</span>
-															<small>SAAS</small>
-														</a>
-													</div>
-
-													<div class="items_col">
-														<a href="home_software.html" class="page_item">
-															<span>
-																<img src="assets/images/pages/home_pages/01_home_10_software.jpg" alt="image_not_found">
-															</span>
-															<small>Software</small>
-														</a>
-													</div>
-												</div>
-											</div>
-										</div>
-									</li>
-
-									<li class="menu_item_has_child">
-										<a href="pricing.html">Portfolio</a>
-										<div class="mega_menu">
-											<div class="container">
-												<div class="row">
-													<div class="col-lg-3">
-														<div class="menu_list ul_li_block clearfix">
-															<h3 class="list_title">Portfolio Grid</h3>
-															<ul class="clearfix">
-																<li><a href="portfolio_fullimage_2_column.html">Full Image (2 Column)</a></li>
-																<li><a href="portfolio_fullimage_3_column.html">Full Image (3 Column)</a></li>
-																<li><a href="portfolio_fullimage_4_column.html">Full Image (4 Column)</a></li>
-
-																<li><a href="portfolio_grid_2_column.html">Grid Style (2 Column)</a></li>
-																<li><a href="portfolio_grid_3_column.html">Grid Style (3 Column)</a></li>
-																<li><a href="portfolio_grid_4_column.html">Grid Style (4 Column)</a></li>
-															</ul>
-														</div>
-													</div>
-
-													<div class="col-lg-3">
-														<div class="menu_list ul_li_block clearfix">
-															<h3 class="list_title">Portfolio Fluid</h3>
-															<ul class="clearfix">
-																<li><a href="portfolio_fullimage_fullwidth_3_column.html">Full Image (3 Column)</a></li>
-																<li><a href="portfolio_fullimage_fullwidth_4_column.html">Full Image (4 Column)</a></li>
-
-																<li><a href="portfolio_grid_fullwidth_3_column.html">Grid Style (3 Column)</a></li>
-																<li><a href="portfolio_grid_fullwidth_4_column.html">Grid Style (4 Column)</a></li>
-															</ul>
-														</div>
-													</div>
-
-													<div class="col-lg-3">
-														<div class="menu_list ul_li_block clearfix">
-															<h3 class="list_title">Portfolio Masonry</h3>
-															<ul class="clearfix">
-																<li><a href="portfolio_fullimage_masonry_2_column.html">Full Image (2 Column)</a></li>
-																<li><a href="portfolio_fullimage_masonry_3_column.html">Full Image (3 Column)</a></li>
-																<li><a href="portfolio_fullimage_masonry_4_column.html">Full Image (4 Column)</a></li>
-
-																<li><a href="portfolio_grid_masonry_2_column.html">Grid Style (2 Column)</a></li>
-																<li><a href="portfolio_grid_masonry_3_column.html">Grid Style (3 Column)</a></li>
-																<li><a href="portfolio_grid_masonry_4_column.html">Grid Style (4 Column)</a></li>
-															</ul>
-														</div>
-													</div>
-
-													<div class="col-lg-3">
-														<div class="menu_list ul_li_block clearfix">
-															<h3 class="list_title">Portfolio Details</h3>
-															<ul class="clearfix">
-																<li><a href="portfolio_details_1.html">Portfolio Details V.1</a></li>
-																<li><a href="portfolio_details_2.html">Portfolio Details V.2</a></li>
-																<li><a href="portfolio_details_3.html">Portfolio Details V.3</a></li>
-															</ul>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</li>
-
-									<li class="menu_item_has_child">
-										<a href="pricing.html">Gallery</a>
-										<ul class="submenu">
-											<li><a href="gallery_fullimage_2_column.html">Grid (2 Column)</a></li>
-											<li><a href="gallery_fullimage_3_column.html">Grid (3 Column)</a></li>
-											<li><a href="gallery_fullimage_4_column.html">Grid (4 Column)</a></li>
-
-											<li><a href="gallery_fullimage_fullwidth_3_column.html">Full Width (3 Column)</a></li>
-											<li><a href="gallery_fullimage_fullwidth_4_column.html">Full Width (4 Column)</a></li>
-
-											<li><a href="gallery_fullimage_masonry_2_column.html">Masonry (2 Column)</a></li>
-											<li><a href="gallery_fullimage_masonry_3_column.html">Masonry (3 Column)</a></li>
-											<li><a href="gallery_fullimage_masonry_4_column.html">Masonry (4 Column)</a></li>
-										</ul>
-									</li>
-
-									<li class="active menu_item_has_child">
-										<a href="#!">Pages</a>
-										<ul class="submenu">
-											<li><a href="about.html">About Us</a></li>
-											<li><a href="pricing.html">Pricing</a></li>
-											<li><a href="team.html">Our Team</a></li>
-											<li><a href="process.html">Process</a></li>
-											<li class="menu_item_has_child">
-												<a href="#!">Services</a>
-												<ul class="submenu">
-													<li><a href="service_1.html">Service V.1</a></li>
-													<li><a href="service_2.html">Service V.2</a></li>
-													<li><a href="service_3.html">Service V.3</a></li>
-												</ul>
-											</li>
-											<li class="menu_item_has_child">
-												<a href="#!">Casestudy</a>
-												<ul class="submenu">
-													<li><a href="case_study.html">Casestudy</a></li>
-													<li><a href="case_study_details.html">Casestudy Details</a></li>
-												</ul>
-											</li>
-											<li class="menu_item_has_child">
-												<a href="#!">Jobs</a>
-												<ul class="submenu">
-													<li><a href="job.html">Job</a></li>
-													<li><a href="job_details.html">Job Details</a></li>
-													<li><a href="job_apply.html">Job Apply</a></li>
-												</ul>
-											</li>
-											<li class="menu_item_has_child">
-												<a href="#!">F.A.Q.</a>
-												<ul class="submenu">
-													<li><a href="faq_1.html">F.A.Q. V.1</a></li>
-													<li><a href="faq_2.html">F.A.Q. V.2</a></li>
-												</ul>
-											</li>
-											<li class="menu_item_has_child">
-												<a href="#!">Register</a>
-												<ul class="submenu">
-													<li><a href="sign_up.html">Sign Up</a></li>
-													<li><a href="sign_in.html">Sign In</a></li>
-												</ul>
-											</li>
-											<li class="active"><a href="contact.html">Contact</a></li>
-											<li><a href="404.html">404</a></li>
-										</ul>
-									</li>
-
-									<li class="menu_item_has_child">
-										<a href="#!">News</a>
-										<ul class="submenu">
-											<li><a href="blog_list.html">Blog List</a></li>
-											<li class="menu_item_has_child">
-												<a href="#!">Blog Grid</a>
-												<ul class="submenu">
-													<li><a href="blog_grid_1.html">Blog Grid V.1</a></li>
-													<li><a href="blog_grid_2.html">Blog Grid V.2</a></li>
-												</ul>
-											</li>
-											<li><a href="blog_masonry.html">Blog Masonry</a></li>
-											<li><a href="blog_details.html">Blog Details</a></li>
-										</ul>
-									</li>
-
-									<li class="menu_item_has_child">
-										<a href="#!">Shop</a>
-										<ul class="submenu">
-											<li><a href="shop_grid.html">Shop Grid</a></li>
-											<li><a href="shop_list.html">Shop List</a></li>
-											<li><a href="shop_details.html">Shop Details</a></li>
-											<li><a href="shop_cart.html">Shop Cart</a></li>
-											<li><a href="shop_checkout.html">Shop Checkout</a></li>
-											<li><a href="shop_wishlist.html">Shop Wishlist</a></li>
-										</ul>
-									</li>
 								</ul>
 							</nav>
 						</div>
@@ -688,18 +434,6 @@
 				<!-- contact_section - end
 				================================================== -->
 
-
-				<!-- map_section - start
-				================================================== -->
-				<div id="map_section" class="map_section clearfix">
-					<div id="google-map" class="google-map">
-						<div id="googleMaps"></div>
-					</div>
-				</div>
-				<!-- map_section - end
-				================================================== -->
-
-
 			</main>
 			<!-- main body - end
 			================================================== -->
@@ -726,35 +460,8 @@
 									<div class="contact_info ul_li_block">
 										<ul class="clearfix">
 											<li>Email: <a href="#!">makro@gmail.com</a></li>
-											<li>Phone: <a href="#!">+948 256 347 968</a></li>
 										</ul>
 									</div>
-								</div>
-							</div>
-
-							<div class="col-lg-2 col-md-4 col-sm-4">
-								<div class="widget useful_links ul_li_block">
-									<h3 class="widget_title mb-50">Makro Homes</h3>
-									<ul class="clearfix">
-										<li><a href="index.html">Agency</a></li>
-										<li><a href="home_app_landing.html">App Landing</a></li>
-										<li><a href="home_chat.html">Chat</a></li>
-										<li><a href="home_digital_agency.html">Digital Agency</a></li>
-										<li><a href="home_digital_marketing.html">Digital Marketing</a></li>
-									</ul>
-								</div>
-							</div>
-
-							<div class="col-lg-2 col-md-4 col-sm-4">
-								<div class="widget useful_links ul_li_block">
-									<h3 class="widget_title mb-50">More Homes</h3>
-									<ul class="clearfix">
-										<li><a href="home_hr_management.html">HR Management</a></li>
-										<li><a href="home_payment.html">Payment</a></li>
-										<li><a href="home_project_management.html">Project Management</a></li>
-										<li><a href="home_saas.html">SAAS</a></li>
-										<li><a href="home_software.html">Software</a></li>
-									</ul>
 								</div>
 							</div>
 
@@ -763,9 +470,6 @@
 									<h3 class="widget_title mb-50">Useful Pages</h3>
 									<ul class="clearfix">
 										<li><a href="about.html">About Us</a></li>
-										<li><a href="service_1.html">Our Services</a></li>
-										<li><a href="case_study.html">Casestudy</a></li>
-										<li><a href="job.html">Jobs</a></li>
 										<li><a href="contact.html">Contact Us</a></li>
 									</ul>
 								</div>
@@ -789,7 +493,7 @@
 							<div class="col-lg-4 col-md-4 col-sm-12">
 								<div class="copyright_text">
 									<p class="mb-0">
-										Copyright © 2020 Desing by <a href="https://droitthemes.com/" class="author_link">DroitThemes</a>
+										Copyright © 2021 Hexadex
 									</p>
 								</div>
 							</div>
