--- a/index.html
+++ b/index.html
@@ -115,17 +115,6 @@
 								</button>
 							</div>
 						</div>
-
-						<div class="col-lg-8 col-md-12">
-							<nav class="main_menu ul_li_center clearfix">
-								<ul class="clearfix">
-								</ul>
-							</nav>
-						</div>
-
-						<div class="col-lg-2 col-md-12">
-							<a href="sign_in.html" class="btn bg_white float-right">Sign In</a>
-						</div>
 						
 					</div>
 				</div>
@@ -151,141 +140,10 @@
 						</p>
 						<div class="btns_group ul_li clearfix">
 							<ul class="clearfix">
-								<li><a href="sign_up.html" class="btn bg_default_blue">Get Started</a></li>
+								<li><a href="contact.html" class="btn bg_default_blue">Get Started</a></li>
 								<li><a href="about.html" class="btn btn_border">Learn More <i class="fal fa-long-arrow-right ml-1"></i></a></li>
 							</ul>
 						</div>
-					</div>
-
-					<div id="menu_list" class="menu_list ul_li_block mp_balancing mb-50 clearfix">
-						<ul class="clearfix">
-							<li class="active menu_item_has_child">
-								<a href="#home_submenu" data-toggle="collapse" aria-expanded="false">Home Pages</a>
-								<ul class="submenu collapse" id="home_submenu" data-parent="#menu_list">
-									<li class="active"><a href="index.html">Agency</a></li>
-									<li><a href="home_app_landing.html">App Landing</a></li>
-									<li><a href="home_chat.html">Chat</a></li>
-									<li><a href="home_digital_agency.html">Digital Agency</a></li>
-									<li><a href="home_digital_marketing.html">Digital Marketing</a></li>
-									<li><a href="home_hr_management.html">HR Management</a></li>
-									<li><a href="home_payment.html">Payment</a></li>
-									<li><a href="home_project_management.html">Project Management</a></li>
-									<li><a href="home_saas.html">SAAS</a></li>
-									<li><a href="home_software.html">Software</a></li>
-								</ul>
-							</li>
-
-							<li class="menu_item_has_child">
-								<a href="#portfolio_submenu" data-toggle="collapse" aria-expanded="false">Portfolio Pages</a>
-								<ul class="submenu collapse" id="portfolio_submenu" data-parent="#menu_list">
-									<li><a href="portfolio_fullimage_2_column.html">Full Image (2 Column)</a></li>
-									<li><a href="portfolio_fullimage_3_column.html">Full Image (3 Column)</a></li>
-									<li><a href="portfolio_fullimage_4_column.html">Full Image (4 Column)</a></li>
-
-									<li><a href="portfolio_grid_2_column.html">Grid Style (2 Column)</a></li>
-									<li><a href="portfolio_grid_3_column.html">Grid Style (3 Column)</a></li>
-									<li><a href="portfolio_grid_4_column.html">Grid Style (4 Column)</a></li>
-
-									<li><a href="portfolio_fullimage_fullwidth_3_column.html">Full Image Fluid (3 Column)</a></li>
-									<li><a href="portfolio_fullimage_fullwidth_4_column.html">Full Image Fluid (4 Column)</a></li>
-
-									<li><a href="portfolio_grid_fullwidth_3_column.html">Grid Style Fluid (3 Column)</a></li>
-									<li><a href="portfolio_grid_fullwidth_4_column.html">Grid Style Fluid (4 Column)</a></li>
-
-									<li><a href="portfolio_fullimage_masonry_2_column.html">Full Image Masonry (2 Column)</a></li>
-									<li><a href="portfolio_fullimage_masonry_3_column.html">Full Image Masonry (3 Column)</a></li>
-									<li><a href="portfolio_fullimage_masonry_4_column.html">Full Image Masonry (4 Column)</a></li>
-
-									<li><a href="portfolio_grid_masonry_2_column.html">Grid Style Masonry (2 Column)</a></li>
-									<li><a href="portfolio_grid_masonry_3_column.html">Grid Style Masonry (3 Column)</a></li>
-									<li><a href="portfolio_grid_masonry_4_column.html">Grid Style Masonry (4 Column)</a></li>
-
-									<li><a href="portfolio_details_1.html">Portfolio Details V.1</a></li>
-									<li><a href="portfolio_details_2.html">Portfolio Details V.2</a></li>
-									<li><a href="portfolio_details_3.html">Portfolio Details V.3</a></li>
-								</ul>
-							</li>
-
-							<li class="menu_item_has_child">
-								<a href="#gallery_submenu" data-toggle="collapse" aria-expanded="false">Gallery Pages</a>
-								<ul class="submenu collapse" id="gallery_submenu" data-parent="#menu_list">
-									<li><a href="gallery_fullimage_2_column.html">Full Image (2 Column)</a></li>
-									<li><a href="gallery_fullimage_3_column.html">Full Image (3 Column)</a></li>
-									<li><a href="gallery_fullimage_4_column.html">Full Image (4 Column)</a></li>
-
-									<li><a href="gallery_grid_2_column.html">Grid Style (2 Column)</a></li>
-									<li><a href="gallery_grid_3_column.html">Grid Style (3 Column)</a></li>
-									<li><a href="gallery_grid_4_column.html">Grid Style (4 Column)</a></li>
-
-									<li><a href="gallery_fullimage_fullwidth_3_column.html">Full Image Fluid (3 Column)</a></li>
-									<li><a href="gallery_fullimage_fullwidth_4_column.html">Full Image Fluid (4 Column)</a></li>
-
-									<li><a href="gallery_grid_fullwidth_3_column.html">Grid Style Fluid (3 Column)</a></li>
-									<li><a href="gallery_grid_fullwidth_4_column.html">Grid Style Fluid (4 Column)</a></li>
-
-									<li><a href="gallery_fullimage_masonry_2_column.html">Full Image Masonry (2 Column)</a></li>
-									<li><a href="gallery_fullimage_masonry_3_column.html">Full Image Masonry (3 Column)</a></li>
-									<li><a href="gallery_fullimage_masonry_4_column.html">Full Image Masonry (4 Column)</a></li>
-
-									<li><a href="gallery_grid_masonry_2_column.html">Grid Style Masonry (2 Column)</a></li>
-									<li><a href="gallery_grid_masonry_3_column.html">Grid Style Masonry (3 Column)</a></li>
-									<li><a href="gallery_grid_masonry_4_column.html">Grid Style Masonry (4 Column)</a></li>
-
-									<li><a href="gallery_details_1.html">Gallery Details V.1</a></li>
-									<li><a href="gallery_details_2.html">Gallery Details V.2</a></li>
-									<li><a href="gallery_details_3.html">Gallery Details V.3</a></li>
-								</ul>
-							</li>
-
-							<li><a href="about.html">About Us</a></li>
-							<li><a href="pricing.html">Pricing Plans</a></li>
-							<li><a href="process.html">Process</a></li>
-
-							<li class="menu_item_has_child">
-								<a href="#pages_submenu" data-toggle="collapse" aria-expanded="false">Other Pages</a>
-								<ul class="submenu collapse" id="pages_submenu" data-parent="#menu_list">
-									<li><a href="service_1.html">Service V.1</a></li>
-									<li><a href="service_2.html">Service V.2</a></li>
-									<li><a href="service_3.html">Service V.3</a></li>
-									<li><a href="case_study.html">Case Study</a></li>
-									<li><a href="case_study_details.html">Case Study Details</a></li>
-									<li><a href="faq_1.html">F.A.Q. V.1</a></li>
-									<li><a href="faq_2.html">F.A.Q. V.2</a></li>
-									<li><a href="job.html">Jobs</a></li>
-									<li><a href="job_details.html">Job Details</a></li>
-									<li><a href="job_apply.html">Job Apply</a></li>
-									<li><a href="team.html">Creative Team</a></li>
-									<li><a href="sign_in.html">Sign In</a></li>
-									<li><a href="sign_up.html">Sign Up</a></li>
-									<li><a href="404.html">404</a></li>
-								</ul>
-							</li>
-
-							<li class="menu_item_has_child">
-								<a href="#shop_submenu" data-toggle="collapse" aria-expanded="false">Shop</a>
-								<ul class="submenu collapse" id="shop_submenu" data-parent="#menu_list">
-									<li><a href="shop_grid.html">Shop Grid</a></li>
-									<li><a href="shop_list.html">Shop List</a></li>
-									<li><a href="shop_details.html">Shop Details</a></li>
-									<li><a href="shop_cart.html">Shop Cart</a></li>
-									<li><a href="shop_checkout.html">Shop Checkout</a></li>
-									<li><a href="shop_wishlist.html">Shop Wishlist</a></li>
-								</ul>
-							</li>
-
-							<li class="menu_item_has_child">
-								<a href="#news_submenu" data-toggle="collapse" aria-expanded="false">News</a>
-								<ul class="submenu collapse" id="news_submenu" data-parent="#menu_list">
-									<li><a href="blog_list.html">Blog List</a></li>
-									<li><a href="blog_grid_1.html">Blog Grid V.1</a></li>
-									<li><a href="blog_grid_2.html">Blog Grid V.2</a></li>
-									<li><a href="blog_masonry.html">Blog Masonry</a></li>
-									<li><a href="blog_details.html">Blog Details</a></li>
-								</ul>
-							</li>
-
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul>
 					</div>
 
 					<div class="contact_info ul_li_block mb-50">
@@ -303,21 +161,6 @@
 							<li><a href="#!"><i class="icon-vimeo"></i></a></li>
 							<li><a href="#!"><i class="icon-linkedin"></i></a></li>
 						</ul>
-					</div>
-
-					<div class="app_content mb-80 clearfix">
-						<h2 class="item_title">support & downloads</h2>
-						<p class="mb-30">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-						</p>
-						<div class="btns_group ul_li clearfix">
-							<ul class="clearfix">
-								<li><a href="#!" class="btn bg_default_blue"><i class="fab fa-apple mr-1"></i> App Store</a></li>
-								<li>
-									<a href="#!" class="btn btn_border"><i class="fab fa-google-play mr-1"></i> Google Play</a>
-								</li>
-							</ul>
-						</div>
 					</div>
 
 					<div class="copyright_text text-center mb-15">
