--- a/about.html
+++ b/about.html
@@ -151,16 +151,10 @@
 						</p>
 						<div class="btns_group ul_li clearfix">
 							<ul class="clearfix">
-								<li><a href="sign_up.html" class="btn bg_default_blue">Get Started</a></li>
+								<li><a href="contact.html" class="btn bg_default_blue">Get Started</a></li>
 								<li><a href="about.html" class="btn btn_border">Learn More <i class="fal fa-long-arrow-right ml-1"></i></a></li>
 							</ul>
 						</div>
-					</div>
-
-					<div id="menu_list" class="menu_list ul_li_block mp_balancing mb-50 clearfix">
-						<ul class="clearfix">
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul>
 					</div>
 
 					<div class="contact_info ul_li_block mb-50">
@@ -180,24 +174,9 @@
 						</ul>
 					</div>
 
-					<div class="app_content mb-80 clearfix">
-						<h2 class="item_title">support & downloads</h2>
-						<p class="mb-30">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-						</p>
-						<div class="btns_group ul_li clearfix">
-							<ul class="clearfix">
-								<li><a href="#!" class="btn bg_default_blue"><i class="fab fa-apple mr-1"></i> App Store</a></li>
-								<li>
-									<a href="#!" class="btn btn_border"><i class="fab fa-google-play mr-1"></i> Google Play</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
 					<div class="copyright_text text-center mb-15">
 						<p class="mb-0">
-							Copyright © 2020 Desing by <a href="https://droitthemes.com/" class="author_link">DroitThemes</a>
+							Copyright © 2021 <a href="https://droitthemes.com/" class="author_link">Hexadex</a>
 						</p>
 					</div>
 
@@ -432,9 +411,9 @@
 			================================================== -->
 
 
-			<!-- footer_section - start
+					<!-- footer_section - start
 			================================================== -->
-			<footer id="footer_section" class="footer_section bg_gray deco_wrap clearfix">
+			<footer id="footer_section" class="footer_section bg_dark_blue text-white deco_wrap clearfix">
 
 				<div class="widget_area">
 					<div class="container position-relative">
@@ -442,18 +421,19 @@
 
 							<div class="col-lg-4 col-md-12">
 								<div class="widget about_content">
-									<div class="brand_logo mb-30">
+									<div class="brand_logo mb-50">
 										<a href="index.html" class="brand_link">
-											<img src="assets/images/logo/logo_2.png" alt="logo_not_found">
+											<img src="assets/images/logo/logo_1.png" alt="logo_not_found">
 										</a>
 									</div>
-									<p class="mb-30">
-										Why say old chap that is spiffin barney and nancy boys bleeder and chimne pot ichard cheers the little rotter so I said, easy peasy buggered blower 
-									</p>
-									<div class="contact_info ul_li_block">
+									<div class="contact_info ul_li_block mb-30">
 										<ul class="clearfix">
 											<li>Email: <a href="#!">makro@gmail.com</a></li>
 										</ul>
+									</div>
+									<div class="form_item mb-0">
+										<input type="email" name="email" placeholder="email">
+										<button type="submit"><i class="ti-arrow-right"></i></button>
 									</div>
 								</div>
 							</div>
@@ -468,13 +448,6 @@
 								</div>
 							</div>
 							
-						</div>
-
-						<div class="deco_image deco_image_1">
-							<img src="assets/images/shapes/img_1.png" alt="spahe_not_found">
-						</div>
-						<div class="deco_image deco_image_2">
-							<img src="assets/images/shapes/img_2.png" alt="spahe_not_found">
 						</div>
 					</div>
 				</div>
@@ -535,14 +508,9 @@
 					</div>
 				</div>
 
-				<div class="deco_image spahe_1" data-aos="fade-up" data-aos-delay="100">
-					<img src="assets/images/shapes/shape_7.png" alt="spahe_not_found">
-				</div>
-
 			</footer>
 			<!-- footer_section - end
 			================================================== -->
-
 
 		</div>
 
