--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 						<div class="col-lg-2 col-md-12">
 							<div class="brand_logo">
 								<a href="index.html" class="brand_link">
-									<img src="assets/images/logo/logo_2.png" alt="logo_not_found">
-									<img src="assets/images/logo/logo_2.png" alt="logo_not_found">
+									<img src="assets/images/logo/hexadex_1.png" alt="Hexadex logo">
+									<img src="assets/images/logo/hexadex_1.png" alt="Hexadex logo">
 								</a>
 								<button type="button" class="menu_btn">
 									<i class="fal fa-bars"></i>
@@ -126,7 +126,7 @@
 
 					<div class="brand_logo mb-50 clearfix">
 						<a href="index.html" class="brand_link">
-							<img src="assets/images/logo/logo_2.png" alt="logo_not_found">
+							<img src="assets/images/logo/hexadex_1.png" alt="Hexadex logo">
 						</a>
 						<span class="close_btn"><i class="fal fa-times"></i></span>
 					</div>
@@ -226,11 +226,11 @@
 							<div class="col-lg-5 col-md-6 col-sm-8">
 								<div class="banner_content">
 									<h1 class="title_text mb-30 text_effect_wrap clearfix">
-										<span class="text_effect text_effect_left">We build and transform</span>
-										<span class="text_effect text_effect_left">businesse strategy</span>
+										<span class="text_effect text_effect_left">We are building a</span>
+										<span class="text_effect text_effect_left">better way</span>
 									</h1>
 									<p class="mb-50" data-aos="fade-up" data-aos-delay="200">
-										Faff about only a quid blower I don't want no agro bleeding chim pot burke tosser cras nice one boot fanny.
+										We build unique and tangible solutions, putting our products and clients on the forefront of the latest technology.
 									</p>
 									<div class="btns_group ul_li" data-aos="fade-up" data-aos-delay="300">
 										<ul class="clearfix">
@@ -285,57 +285,44 @@
 					<div class="container w-1520">
 						<div class="section_title text-center mb-30 text_effect_wrap">
 							<h3 class="sub_title mb-15"><span class="text_effect text_effect_bottom">WE ARE THE BEST</span></h3>
-							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Why Choose Makro</span></h2>
+							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">The Hexadex Way</span></h2>
 						</div>
 
 						<div class="row">
-							<div class="col-lg-3 col-md-6 col-sm-6">
+							<div class="col-lg-4 col-md col-sm-6">
 								<div class="service_primary_2" data-aos="fade-up" data-aos-delay="300">
 									<div class="item_icon icon_blue">
 										<i class="icon-setting"></i>
 									</div>
-									<h3 class="item_title">Management</h3>
+									<h3 class="item_title">Agile</h3>
 									<p>
-										Why I say old chap that is spiffing bodge blag pardon me buggered mufty Oxfords butty bubble squeak
+										From idea to deployment, feedback and quick iteration are a key part of building successful products.
 									</p>
 									<a href="service_1.html" class="details_btn">Read More <i class="fal fa-long-arrow-right ml-1"></i></a>
 								</div>
 							</div>
 
-							<div class="col-lg-3 col-md-6 col-sm-6">
-								<div class="service_primary_2" data-aos="fade-up" data-aos-delay="500">
-									<div class="item_icon icon_orange">
-										<i class="icon-tube"></i>
-									</div>
-									<h3 class="item_title">Customer Support</h3>
-									<p>
-										Why I say old chap that is spiffing bodge blag pardon me buggered mufty Oxfords butty bubble squeak
-									</p>
-									<a href="service_1.html" class="details_btn">Read More <i class="fal fa-long-arrow-right ml-1"></i></a>
-								</div>
-							</div>
-
-							<div class="col-lg-3 col-md-6 col-sm-6">
+							<div class="col-lg-4 col-md col-sm-6">
 								<div class="service_primary_2" data-aos="fade-up" data-aos-delay="700">
 									<div class="item_icon icon_green">
 										<i class="icon-ring"></i>
 									</div>
 									<h3 class="item_title">Collaborative</h3>
 									<p>
-										Why I say old chap that is spiffing bodge blag pardon me buggered mufty Oxfords butty bubble squeak
+										We are better together. Working closely with clients to deliver customized solutions is our specialty.
 									</p>
 									<a href="service_1.html" class="details_btn">Read More <i class="fal fa-long-arrow-right ml-1"></i></a>
 								</div>
 							</div>
 
-							<div class="col-lg-3 col-md-6 col-sm-6">
+							<div class="col-lg-4 col-md col-sm-6">
 								<div class="service_primary_2" data-aos="fade-up" data-aos-delay="900">
 									<div class="item_icon icon_purple">
 										<i class="icon-processor"></i>
 									</div>
-									<h3 class="item_title">Center software</h3>
+									<h3 class="item_title">Bleeding Edge</h3>
 									<p>
-										Why I say old chap that is spiffing bodge blag pardon me buggered mufty Oxfords butty bubble squeak
+										Constantly striving to push the envelope of what is possible, we are trailblazers and early adopters.
 									</p>
 									<a href="service_1.html" class="details_btn">Read More <i class="fal fa-long-arrow-right ml-1"></i></a>
 								</div>
@@ -449,7 +436,7 @@
 								<div class="section_title decrease_size">
 									<h2 class="title_text mb-15">Want to get Started?</h2>
 									<p class="mb-0">
-										The free demo comes with no commitments and <span class="d-block">no credit card required.</span>
+										Contact us for a demo, we would <span class="d-block">love to work with you.</span>
 									</p>
 								</div>
 							</div>
@@ -463,7 +450,7 @@
 							</div>
 
 							<div class="col-lg-2 col-md-12">
-								<button type="submit" class="btn btn_border border_white float-right">Subscribe</button>
+								<button type="submit" class="btn btn_border border_white float-right">Contact</button>
 							</div>
 
 						</div>
@@ -490,12 +477,12 @@
 								<div class="widget about_content">
 									<div class="brand_logo mb-50">
 										<a href="index.html" class="brand_link">
-											<img src="assets/images/logo/logo_1.png" alt="logo_not_found">
+											<img src="assets/images/logo/hexadex_2.png" alt="Hexadex logo">
 										</a>
 									</div>
 									<div class="contact_info ul_li_block mb-30">
 										<ul class="clearfix">
-											<li>Email: <a href="#!">makro@gmail.com</a></li>
+											<li>Email: <a href="#!">jon@hexadex.org</a></li>
 										</ul>
 									</div>
 									<div class="form_item mb-0">
